@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.terasoluna.gfw.functionaltest</groupId>
   <artifactId>terasoluna-gfw-functionaltest</artifactId>
-  <version>5.5.0-SNAPSHOT</version>
+  <version>5.5.1-SNAPSHOT</version>
   <packaging>pom</packaging>
   <modules>
     <module>terasoluna-gfw-functionaltest-env</module>
@@ -15,7 +15,7 @@
   <parent>
     <groupId>org.terasoluna.gfw</groupId>
     <artifactId>terasoluna-gfw-parent</artifactId>
-    <version>5.5.0-SNAPSHOT</version>
+    <version>5.5.1-SNAPSHOT</version>
     <relativePath />
   </parent>
 
@@ -265,6 +265,14 @@
       </dependency>
       <!-- == End Database == -->
 
+      <!-- == Begin For JDK 11 == -->
+      <dependency>
+        <groupId>javax.annotation</groupId>
+        <artifactId>javax.annotation-api</artifactId>
+        <version>${javax.annotation-api.version}</version>
+      </dependency>
+      <!-- == End For JDK 11 == -->
+
     </dependencies>
   </dependencyManagement>
   <properties>
@@ -282,14 +290,14 @@
     <db2jcc4.version>4.21.29</db2jcc4.version>
     <selenium.version>3.0.1</selenium.version>
     <webdrivermanager.version>1.6.2</webdrivermanager.version>
+    <javax.annotation-api.version>1.3.2</javax.annotation-api.version>
     <!-- == Project Properties == -->
     <project.env.main.directory>src/main</project.env.main.directory>
     <project.env.buildFinalName>${project.artifactId}-${project.version}</project.env.buildFinalName>
     <project.root.basedir>${project.basedir}</project.root.basedir>
     <encoding>UTF-8</encoding>
     <java-version>1.8</java-version>
-    <cargo.jvmargs>-Xms512m -Xmx1024m -Duser.language=ja
-      -Duser.country=JP -Duser.timezone=Asia/Tokyo</cargo.jvmargs>
+    <cargo.jvmargs>-Xms512m -Xmx1024m -Duser.language=ja -Duser.country=JP -Duser.timezone=Asia/Tokyo</cargo.jvmargs>
   </properties>
   <profiles>
     <profile>
@@ -425,6 +433,31 @@
         <project.env.main.directory>configs/webspherelp-db2</project.env.main.directory>
         <project.env.buildFinalName>${project.artifactId}-${project.version}-webspherelp-db2</project.env.buildFinalName>
       </properties>
+    </profile>
+    <profile>
+      <id>jdk11</id>
+      <activation>
+        <jdk>11</jdk>
+      </activation>
+      <properties>
+        <java-version>11</java-version>
+        <cargo.jvmargs>-Xms512m -Xmx1024m -Duser.language=ja -Duser.country=JP -Duser.timezone=Asia/Tokyo -Djava.locale.providers=COMPAT,CLDR,SPI</cargo.jvmargs>
+      </properties>
+      <build>
+        <pluginManagement>
+          <plugins>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-surefire-plugin</artifactId>
+              <configuration>
+                <systemProperties>
+                  <jdk.tls.client.protocols>TLSv1.2</jdk.tls.client.protocols>
+                </systemProperties>
+              </configuration>
+            </plugin>
+          </plugins>
+        </pluginManagement>
+      </build>
     </profile>
   </profiles>
 </project>
